--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
         android:layout_marginBottom="65dp"
         android:layout_marginRight="8dp"
         android:src="@drawable/ic_add_white_24dp"
-        app:backgroundTint="@color/Secondary" />
+        app:backgroundTint="@color/Secondary"
+        android:layout_marginEnd="8dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/mainBottomNav"
