--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,26 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.AccountFragment">
+    tools:context=".fragment.AccountFragment"
+
+    >
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/setup_image"
+        android:layout_width="209dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_margin="50dp"
+        android:src="@drawable/default_profile" />
+
+    <EditText
+        android:layout_gravity="center"
+        android:id="@+id/setup_text"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:layout_marginRight="8dp"
+        android:hint="Name"
+        android:padding="12dp" />
 
     <Button
-        android:id="@+id/btnAccountSett"
-        android:layout_width="match_parent"
+        android:id="@+id/button_setup"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/action_setting"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="5dp"
-        android:textSize="25sp"/>
+        android:layout_gravity="center"
+        android:background="@color/Secondary"
+        android:text="@string/text_of_btn_setup"
+        android:backgroundTint="@color/Secondary"
+        android:padding="15dp" />
 
-    <Button
-        android:id="@+id/btnLogut"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="@string/action_logout"
-        android:textSize="25sp"/>
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/tvLogut"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="50dp"
+            android:text="@string/action_logout"
+            android:textSize="25sp" />
+
+    </FrameLayout>
+
 
 </LinearLayout>
