--- a/app/src/main/res/layout/post_list_item.xml
+++ b/app/src/main/res/layout/post_list_item.xml
@@ -43,9 +43,8 @@
                 android:id="@+id/post_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginLeft="4dp"
                 android:text="@string/username"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,23 +54,25 @@
                 android:id="@+id/post_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:layout_marginLeft="6dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="6dp"
                 android:layout_marginBottom="4dp"
                 android:text="@string/post_date"
                 app:layout_constraintBottom_toTopOf="@+id/post_title"
                 app:layout_constraintStart_toEndOf="@+id/post_user_image"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.062" />
 
             <ImageView
                 android:id="@+id/post_image"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="60dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/post_user_image"
                 app:srcCompat="@drawable/placeholderimage" />
@@ -80,9 +81,9 @@
                 android:id="@+id/post_title"
                 android:layout_width="317dp"
                 android:layout_height="35dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginLeft="6dp"
-                android:layout_marginBottom="34dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="68dp"
                 android:text="@string/lorem"
                 app:layout_constraintBottom_toTopOf="@+id/post_image"
                 app:layout_constraintStart_toEndOf="@+id/post_user_image" />
@@ -99,7 +100,23 @@
                 app:layout_constraintBottom_toTopOf="@+id/post_title"
                 app:layout_constraintStart_toEndOf="@+id/post_date"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintVertical_bias="0.062" />
+
+            <TextView
+                android:id="@+id/tv_description"
+                android:layout_width="318dp"
+                android:layout_height="53dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="7dp"
+                android:text="@string/lorem"
+                app:layout_constraintBottom_toTopOf="@+id/post_image"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/post_username"
+                app:layout_constraintTop_toBottomOf="@+id/post_title" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
