Cambios de diseño y de interfaz

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/main_toolbar"
@@ -40,15 +38,14 @@
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
             app:menu="@menu/bottom_menu"
-            android:background="@color/colorPrimary"></com.google.android.material.bottomnavigation.BottomNavigationView>
+            android:background="@color/colorAccent"></com.google.android.material.bottomnavigation.BottomNavigationView>
 
         <FrameLayout
             android:id="@+id/main_cointer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/main_toolbar"
-            android:layout_above="@id/mainBottomNav"
-            />
+            android:layout_above="@id/mainBottomNav" />
     </RelativeLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
