--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-
         android:layout_marginTop="8dp"
         android:indeterminate="true"
         android:visibility="invisible"
@@ -128,7 +127,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="Already have an account?"
+        android:text="@string/already_have_an_account"
         android:textColor="@color/White"
         app:layout_constraintBottom_toTopOf="@+id/btn_reg_back"
         app:layout_constraintEnd_toEndOf="parent"
