--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="Secondary">#F9AA33</color>
     <color name="White">#ffffff</color>
     <color name="colorProgressBarr">#F9AA33</color>
+    <color name="light_yellow">#FBD680</color>
 
 </resources>
 
