--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,11 +6,23 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorAccent</item>
         <item name="colorAccent">@color/Secondary</item>
+
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
     </style>
-    <style name="SecondActivity" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+    <style name="AppTheme.NoActionBar" parent="AppTheme">
         <item name="colorPrimaryDark">@color/colorPrimary</item>
-        <item name="colorAccent">@color/Secondary</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
     </style>
+    <style name="AppTheme.NoActionBar.2" parent="AppTheme">
+        <item name="colorPrimaryDark">@color/White</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+    </style>
+    <style name="AppTheme.NoActionBar.crop" parent="AppTheme">
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="windowNoTitle">true</item>
+    <item name="windowActionBar">false</item>
+</style>
 </resources>
