--- a/app/src/main/res/values-es/values-es.xml
+++ b/app/src/main/res/values-es/values-es.xml
@@ -22,15 +22,14 @@
     <string name="btn_homce_text">Inicio</string>
     <string name="btn_bottom_navigation">Inicio</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sign_up_for_sicor">Registrarse en SICOR</string>
     <string name="are_you_new_here_create_an_account">¿Eres nuevo aquí? ¡Crea una cuenta!</string>
     <string name="enter_a_description">Añade una descripción</string>
     <string name="post_date">Fecha de publicación</string>
-    <string name="high">Alto</string>
     <string name="username">Nombre</string>
     <string name="lorem">Lorem ipsum dolor sit amet regione urbanitas vis qui elit populo ut</string>
     <string name="enter_a_name">Nombre</string>
     <string name="already_have_an_account">¿Ya posees una cuenta?</string>
+    <string name="Settings_bro">Ajustes</string>
 </resources>
